--- a/views/block.ejs
+++ b/views/block.ejs
@@ -7,21 +7,19 @@
  <body>
      
 
-    <div class ="navbar"><img src="img\logo now.jpeg"height="50px" width="50px"/>
+    <div class ="navbar">
+        <div><img src="img\logo now.jpeg"height="50px" width="50px"/></div>
        <h2><b>Myblockchain</b></h2> 
+       <div class="nav-items">
+            <a href="/">Home</a>
+            <a href="/about">About Us</a>
+            <a href="https://github.com/Iamvarunking/my-blockchain" target="_blank">Github</a>
+       </div>
      </div>
-     <div>
-     <section id="vid-par">
 
-   
-    
+     <section id="vid-par">
     <video id= "my-vid"autoplay loop muted>
-    
     <source type="video/mp4" src="img\video (2).mp4"/>
-    
-    
-       
-    
     </video>
     
     <div id ="vid-content">
@@ -36,7 +34,9 @@
              <br><br>
              <button class="button"><b>Click here to add</b> </button>
          </form>
-
+        </div>
+        <div class="footer"> 
+            Copyright © 2023 . All rights reserved AV CODERS   
         </div>
 </body>
 </html>
