--- a/views/block.ejs
+++ b/views/block.ejs
@@ -36,7 +36,7 @@
          </form>
         </div>
         <div class="footer"> 
-            Copyright © 2023 . All rights reserved AV CODERS   
+           <p> Copyright © 2023 . All rights reserved AV CODERS</p>   
         </div>
 </body>
 </html>
